--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
     <artifactId>servlet-api</artifactId>
     <version>2.5</version>
 </dependency>
+ <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>3.3.1</version>
+</plugin>   
 </dependencies>
 <distributionManagement>
   <repository>
