--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
       <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
   <dependencies>
+    <plugin>
+	     <groupId>org.apache.maven.plugins</groupId>
+	     <artifactId>maven-war-plugin</artifactId>
+	     <version>3.2.2</version>
+    </plugin>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
